website/versioned_docs/version-0.0.4/api/cloud/cloud.k8s.md
---
id: version-0.0.4-cloud.k8s
title: k8s namespace
hide_title: true
original_id: cloud.k8s
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Cloud API Overview](overview) &gt; [@adpt/cloud](./cloud.md) &gt; [k8s](./cloud.k8s.md)

## k8s namespace

<b>Signature:</b>

```typescript
export * from "./Container";
export * from "./Resource";
export * from "./Pod";
export * from "./Service";
export * from "./ServiceDeployment";
export * from "./common";
export { K8sPlugin, createK8sPlugin, resourceElementToName, registerResourceKind } from "./k8s_plugin";
//# sourceMappingURL=index.d.ts.map
```

## Classes

|  Class | Description |
|  --- | --- |
|  [K8sContainer](./cloud.k8s.k8scontainer.md) | Kubernetes-specific container. |
|  [Pod](./cloud.k8s.pod.md) |  |
|  [Resource](./cloud.k8s.resource.md) |  |
|  [ServiceDeployment](./cloud.k8s.servicedeployment.md) | A component for mapping a group of abstract [Container](./cloud.container.md)<!-- -->s and [NetworkService](./cloud.networkservice.md)<!-- -->s to Kubernetes [k8s.Pod](./cloud.k8s.pod.md)<!-- -->s and [k8s.K8sContainer](./cloud.k8s.k8scontainer.md)<!-- -->s. |

## Functions

|  Function | Description |
|  --- | --- |
|  [computeNamespaceFromMetadata(metadata)](./cloud.k8s.computenamespacefrommetadata.md) |  |
|  [Container(props)](./cloud.k8s.container.md) | Component that implements the abstract [Container](./cloud.container.md) interface and translates to a Kubernetes-specific [k8s.K8sContainer](./cloud.k8s.k8scontainer.md)<!-- -->. |
|  [isK8sContainerElement(x)](./cloud.k8s.isk8scontainerelement.md) |  |
|  [isResourceFinalElement(e)](./cloud.k8s.isresourcefinalelement.md) |  |
|  [k8sContainerProps(abstractProps, k8sProps)](./cloud.k8s.k8scontainerprops.md) | Low level utility function to translate from the abstract [Container](./cloud.container.md) component props ([ContainerProps](./cloud.containerprops.md)<!-- -->) to [k8s.K8sContainerProps](./cloud.k8s.k8scontainerprops.md) to be used in a [k8s.K8sContainer](./cloud.k8s.k8scontainer.md)<!-- -->. |
|  [k8sServiceProps(abstractProps)](./cloud.k8s.k8sserviceprops.md) |  |
|  [Service(propsIn)](./cloud.k8s.service.md) |  |

## Interfaces

|  Interface | Description |
|  --- | --- |
|  [ClusterInfo](./cloud.k8s.clusterinfo.md) | Holds the information needed to connect, authenticate, and run code in a kuberenetes cluster |
|  [ContainerPort](./cloud.k8s.containerport.md) |  |
|  [ContainerProps](./cloud.k8s.containerprops.md) | Props for [k8s.Container()](./cloud.k8s.container.md)<!-- -->. |
|  [ContainerSpec](./cloud.k8s.containerspec.md) | Resource spec for a Kubernetes container. See the Kubernetes [API docs](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.10/#container-v1-core) for more details. |
|  [CRSpec](./cloud.k8s.crspec.md) |  |
|  [EnvVarFrom](./cloud.k8s.envvarfrom.md) |  |
|  [EnvVarSimple](./cloud.k8s.envvarsimple.md) |  |
|  [K8sContainerProps](./cloud.k8s.k8scontainerprops.md) | Props for the Kubernetes-specific [k8s.K8sContainer](./cloud.k8s.k8scontainer.md) component. |
|  [Kubeconfig](./cloud.k8s.kubeconfig.md) |  |
|  [Metadata](./cloud.k8s.metadata.md) |  |
|  [PodProps](./cloud.k8s.podprops.md) |  |
|  [PodSpec](./cloud.k8s.podspec.md) |  |
|  [ResourceBase](./cloud.k8s.resourcebase.md) |  |
|  [ResourceCR](./cloud.k8s.resourcecr.md) |  |
|  [ResourceInfo](./cloud.k8s.resourceinfo.md) |  |
|  [ResourcePod](./cloud.k8s.resourcepod.md) |  |
|  [ResourceService](./cloud.k8s.resourceservice.md) |  |
|  [ServiceDeploymentProps](./cloud.k8s.servicedeploymentprops.md) |  |
|  [ServicePort](./cloud.k8s.serviceport.md) |  |
|  [ServiceProps](./cloud.k8s.serviceprops.md) |  |
|  [ServiceSpec](./cloud.k8s.servicespec.md) |  |

## Variables

|  Variable | Description |
|  --- | --- |
|  [podResourceInfo](./cloud.k8s.podresourceinfo.md) |  |
|  [serviceResourceInfo](./cloud.k8s.serviceresourceinfo.md) |  |

## Type Aliases

|  Type Alias | Description |
|  --- | --- |
|  [EnvVar](./cloud.k8s.envvar.md) |  |
|  [FromContainerProps](./cloud.k8s.fromcontainerprops.md) | See [k8s.k8sContainerProps()](./cloud.k8s.k8scontainerprops.md)<!-- -->. |
|  [Kind](./cloud.k8s.kind.md) |  |
|  [ResourceProps](./cloud.k8s.resourceprops.md) |  |
|  [Spec](./cloud.k8s.spec.md) |  |
