website/versioned_docs/version-0.1.0/api/cloud/cloud.k8s.md
---
id: "version-0.1.0-cloud.k8s"
title: "k8s namespace"
hide_title: true
original_id: "cloud.k8s"
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Cloud API Overview](overview) &gt; [@adpt/cloud](./cloud.md) &gt; [k8s](./cloud.k8s.md)

## k8s namespace

Adapt components for Kubernetes

## Classes

|  Class | Description |
|  --- | --- |
|  [K8sContainer](./cloud.k8s.k8scontainer.md) | Kubernetes-specific container. |
|  [Pod](./cloud.k8s.pod.md) | Component for Kubernetes Pods |
|  [Resource](./cloud.k8s.resource.md) | Primitive Component recognized by the k8s plugin to represent resources |
|  [ServiceDeployment](./cloud.k8s.servicedeployment.md) | A component for mapping a group of abstract [Container](./cloud.container.md)<!-- -->s and [NetworkService](./cloud.networkservice.md)<!-- -->s to Kubernetes [k8s.Pod](./cloud.k8s.pod.md)<!-- -->s and [k8s.K8sContainer](./cloud.k8s.k8scontainer.md)<!-- -->s. |

## Functions

|  Function | Description |
|  --- | --- |
|  [computeNamespaceFromMetadata(metadata)](./cloud.k8s.computenamespacefrommetadata.md) |  |
|  [Container(props)](./cloud.k8s.container.md) | Component that implements the abstract [Container](./cloud.container.md) interface and translates to a Kubernetes-specific [k8s.K8sContainer](./cloud.k8s.k8scontainer.md)<!-- -->. |
|  [isK8sContainerElement(x)](./cloud.k8s.isk8scontainerelement.md) | Tests whether an element is a [k8s.K8sContainer](./cloud.k8s.k8scontainer.md) element |
|  [isResourceFinalElement(e)](./cloud.k8s.isresourcefinalelement.md) | Type assertion to see if an element is both a [Resource](./cloud.k8s.resource.md) and a <code>@adpt/core#FinalElement</code> |
|  [k8sContainerProps(abstractProps, k8sProps)](./cloud.k8s.k8scontainerprops.md) | Low level utility function to translate from the abstract [Container](./cloud.container.md) component props ([ContainerProps](./cloud.containerprops.md)<!-- -->) to [k8s.K8sContainerProps](./cloud.k8s.k8scontainerprops.md) to be used in a [k8s.K8sContainer](./cloud.k8s.k8scontainer.md)<!-- -->. |
|  [makeClusterInfo(options)](./cloud.k8s.makeclusterinfo.md) | Make a [k8s.ClusterInfo](./cloud.k8s.clusterinfo.md) object suitable for use with k8s resources |
|  [Service(propsIn)](./cloud.k8s.service.md) | Native Kubernetes Service resource |

## Interfaces

|  Interface | Description |
|  --- | --- |
|  [ClusterInfo](./cloud.k8s.clusterinfo.md) | Holds the information needed to connect, authenticate, and run code in a kuberenetes cluster |
|  [ContainerPort](./cloud.k8s.containerport.md) |  |
|  [ContainerProps](./cloud.k8s.containerprops.md) | Props for [k8s.Container()](./cloud.k8s.container.md)<!-- -->. |
|  [ContainerSpec](./cloud.k8s.containerspec.md) | Resource spec for a Kubernetes container. See the Kubernetes [API docs](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.18/#container-v1-core) for more details. |
|  [CRSpec](./cloud.k8s.crspec.md) |  |
|  [EnvVarFrom](./cloud.k8s.envvarfrom.md) |  |
|  [EnvVarSimple](./cloud.k8s.envvarsimple.md) |  |
|  [K8sContainerProps](./cloud.k8s.k8scontainerprops.md) | Props for the Kubernetes-specific [k8s.K8sContainer](./cloud.k8s.k8scontainer.md) component. |
|  [Kubeconfig](./cloud.k8s.kubeconfig.md) |  |
|  [MakeClusterInfoOptions](./cloud.k8s.makeclusterinfooptions.md) | Options for [k8s.makeClusterInfo()](./cloud.k8s.makeclusterinfo.md) |
|  [Metadata](./cloud.k8s.metadata.md) |  |
|  [PodProps](./cloud.k8s.podprops.md) |  |
|  [PodSpec](./cloud.k8s.podspec.md) | Spec for for Kubernetes Pods |
|  [ResourceBase](./cloud.k8s.resourcebase.md) |  |
|  [ResourceCR](./cloud.k8s.resourcecr.md) |  |
|  [ResourceInfo](./cloud.k8s.resourceinfo.md) |  |
|  [ResourcePod](./cloud.k8s.resourcepod.md) |  |
|  [ResourceService](./cloud.k8s.resourceservice.md) |  |
|  [ServiceDeploymentProps](./cloud.k8s.servicedeploymentprops.md) | Props for [k8s.ServiceDeployment](./cloud.k8s.servicedeployment.md) |
|  [ServicePort](./cloud.k8s.serviceport.md) |  |
|  [ServiceProps](./cloud.k8s.serviceprops.md) |  |
|  [ServiceSpec](./cloud.k8s.servicespec.md) |  |

## Type Aliases

|  Type Alias | Description |
|  --- | --- |
|  [EnvVar](./cloud.k8s.envvar.md) |  |
|  [FromContainerProps](./cloud.k8s.fromcontainerprops.md) | See [k8s.k8sContainerProps()](./cloud.k8s.k8scontainerprops.md)<!-- -->. |
|  [Kind](./cloud.k8s.kind.md) | Kubernetes Kind |
|  [ResourceProps](./cloud.k8s.resourceprops.md) |  |
|  [Spec](./cloud.k8s.spec.md) |  |
